cmake_minimum_required(VERSION 3.26)
project(PROJ2)

set(CMAKE_CXX_STANDARD 17)

add_executable(PROJ2 main.cpp
        Airport.cpp
        Airline.h
        Airline.cpp
        Flight.cpp
        FlightNetworkManager.cpp
        FlightGraph.cpp
        Menu.h
        Menu.cpp
        FlightNetworkManager.cpp
        FlightNetworkManager.cpp
        FlightNetworkManager.cpp)
